[package]
name = "lose_at_hangman"
version = "0.1.0"
authors = ["Devon Burnham <novedevo@gmail.com>"]
edition = "2018"

[lib]
name = "lose_at_hangman"
path = "src/lib.rs"

[profile.dev]
# opt-level = 1

# otherwise it takes about a second to process the data at first

# [profile.release]
# opt-level = 3
# lto = true
# debug = false
# codegen-units = 1
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
regex = "*"