[package]
name = "hangman_lib"
version = "0.1.0"
authors = ["Devon Burnham <novedevo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
csv = "1.2"
regex = "1.7"
serde = "1.0.159"
bincode = "1.3"
rustc-hash = "1.1"
