[package]
name = "hangman_cli"
version = "0.1.0"
authors = ["Devon Burnham <novedevo@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1
# otherwise it takes about a second to process the data at first

[profile.release]
opt-level = 3
lto = true
debug = true
codegen-units = 1
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "3.0.0-beta.2"
hangman_lib = { path = "../hangman_lib" }